infrastructure/grafana-tempo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "${infranamespaceprefix}grafana-tempo"
  labels:
    istio.io/rev: "stable"
    name: "${infranamespaceprefix}grafana-tempo"
